syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.constant";
option java_multiple_files = true;

enum ProfileAccessStrategy {
    ALL = 0;
    ALL_EXCEPT_BLACKLISTED_USERS = 1;
    FRIENDS = 2;
}
