syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.constant";
option java_multiple_files = true;

enum ResponseAction {
    ACCEPT = 0;
    DECLINE = 1;
    IGNORE = 2;
}
